# rust-mcp

./: Cargo.toml  README.md  TOOLS_INSTRUCTION.md
docs/configuration/: claude-desktop.md  environment-variables.md  esp32.md  gemini-cli.md  other-clients.md  roo-code.md
src/: inspection.rs
src/analyzer/: client.rs  mod.rs  protocol.rs  symbol.rs
src/server/: handler.rs  parameters.rs
src/tools/: advanced.rs  analysis.rs  cargo.rs  mod.rs  navigation.rs  quality.rs  refactoring.rs  types.rs
