[package]
name = "rustmcp"
version = "1.0.0"
edition = "2024"
authors = ["Dex", "pavvers1@gmail.com"]

[dependencies]
rmcp = { version = "0.14.0", features = ["transport-io"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars = "1.2.0"
anyhow = "1.0.100"